Fixed the service widgets tag z-index

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -62,3 +62,7 @@ dialog ::-webkit-scrollbar {
 ::-webkit-details-marker {
   display: none;
 }
+
+li.service {
+  z-index: 10;
+}
